// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home snapshot matches post-submit user 1`] = `
<DocumentFragment>
  <div
    class="oec-loading-wrapper"
  >
    <div
      aria-hidden="true"
      class="opacity-0"
    >
      <div
        class="Home grid-container margin-top-4"
      >
        <div
          class="grid-row grid-gap"
        >
          <div
            class="tablet:grid-col-8 margin-top-4"
          >
            <h1
              class="margin-top-0"
            >
              Hello Voldy!
            </h1>
            <p>
              ECE Reporter will allow you to share your state-funded enrollment data with the Office of Early Childhood (OEC). Make sure the site names and funding spaces below are accurate before you start entering data.
            </p>
            <h2
              class="pre-submit-h2"
            >
              Your managed sites and funding spaces
            </h2>
          </div>
          <div
            class="tablet:grid-col-4 margin-top-4 img"
            role="presentation"
          >
            <svg>
              PersonWithSpreadsheet.svg
            </svg>
          </div>
        </div>
        <h2
          class="pre-submit-h2"
        >
          How to use ECE Reporter
        </h2>
        <p>
          These instructions guide you through the file upload process to add many records at once. If you'd like to add records manually, 
          <a
            href="/roster/"
          >
             you can add them on your roster
          </a>
          .
        </p>
        <ol
          class="how-to-list"
        >
          <li
            class="how-to-step"
          >
            <h3
              class="how-to-header"
            >
              Review the data requirements
            </h3>
            <p
              class="how-to-body"
            >
              Learn more about the data elements ECE Reporter collects for each enrollment.
            </p>
            <p
              class="how-to-button"
            >
              <a
                class="usa-button usa-button--unstyled"
                href="/data-requirements/"
              >
                <span
                  class="oec-text-with-icon"
                >
                  See required data
                  <svg
                    class="oec-text-with-icon__icon oec-text-with-icon__icon--direction-right oec-text-with-icon__icon--side-right"
                  >
                    arrowRight.svg
                  </svg>
                </span>
              </a>
            </p>
          </li>
          <li
            class="how-to-step"
          >
            <h3
              class="how-to-header"
            >
              Download the data template
            </h3>
            <p
              class="how-to-body"
            >
              You'll need to enter data in this file to upload in ECE Reporter.
            </p>
            <p
              class="how-to-button"
            >
              <a
                class="usa-button usa-button--unstyled"
                href="/template/"
              >
                <span
                  class="oec-text-with-icon"
                >
                  Download the template
                  <svg
                    class="oec-text-with-icon__icon oec-text-with-icon__icon--direction-right oec-text-with-icon__icon--side-right"
                  >
                    arrowRight.svg
                  </svg>
                </span>
              </a>
            </p>
          </li>
          <li
            class="how-to-step"
          >
            <h3
              class="how-to-header"
            >
              Prepare your data
            </h3>
            <p
              class="how-to-body"
            >
              Get instructions on how to enter data into OEC's template.
            </p>
            <p
              class="how-to-button"
            >
              <a
                class="usa-button usa-button--unstyled"
                href="https://help.ece-reporter.ctoec.org/prepare-your-data/"
              >
                <span
                  class="oec-text-with-icon"
                >
                  See the how-to guide
                  <svg
                    class="oec-text-with-icon__icon oec-text-with-icon__icon--direction-right oec-text-with-icon__icon--side-right"
                  >
                    arrowRight.svg
                  </svg>
                </span>
              </a>
            </p>
          </li>
          <li
            class="how-to-step"
          >
            <h3
              class="how-to-header"
            >
              Upload your data
            </h3>
            <p
              class="how-to-body"
            >
              Once your template is filled out, you'll upload the data to ECE Reporter.
            </p>
            <p
              class="how-to-button"
            >
              <a
                class="usa-button usa-button--unstyled"
                href="/upload/"
              >
                <span
                  class="oec-text-with-icon"
                >
                  Go to file upload
                  <svg
                    class="oec-text-with-icon__icon oec-text-with-icon__icon--direction-right oec-text-with-icon__icon--side-right"
                  >
                    arrowRight.svg
                  </svg>
                </span>
              </a>
            </p>
          </li>
        </ol>
      </div>
    </div>
    <div
      class="oec-loading-wrapper__indicator bg-white"
    >
      <div
        class="MuiCircularProgress-root indeterminate MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
        role="progressbar"
        style="width: 40px; height: 40px;"
      >
        <svg
          class="MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
            cx="44"
            cy="44"
            fill="none"
            r="20.2"
            stroke-width="3.6"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Home snapshot matches pre-submit user 1`] = `
<DocumentFragment>
  <div
    class="oec-loading-wrapper"
  >
    <div
      aria-hidden="false"
      class=""
    >
      <div
        class="Home grid-container margin-top-4"
      >
        <div
          class="grid-row grid-gap"
        >
          <div
            class="tablet:grid-col-8 margin-top-4"
          >
            <h1
              class="margin-top-0"
            >
              Hello Voldy!
            </h1>
            <p>
              ECE Reporter will allow you to share your state-funded enrollment data with the Office of Early Childhood (OEC). Make sure the site names and funding spaces below are accurate before you start entering data.
            </p>
            <h2
              class="pre-submit-h2"
            >
              Your managed sites and funding spaces
            </h2>
          </div>
          <div
            class="tablet:grid-col-4 margin-top-4 img"
            role="presentation"
          >
            <svg>
              PersonWithSpreadsheet.svg
            </svg>
          </div>
        </div>
        <h2
          class="pre-submit-h2"
        >
          How to use ECE Reporter
        </h2>
        <p>
          These instructions guide you through the file upload process to add many records at once. If you'd like to add records manually, 
          <a
            href="/roster/"
          >
             you can add them on your roster
          </a>
          .
        </p>
        <ol
          class="how-to-list"
        >
          <li
            class="how-to-step"
          >
            <h3
              class="how-to-header"
            >
              Review the data requirements
            </h3>
            <p
              class="how-to-body"
            >
              Learn more about the data elements ECE Reporter collects for each enrollment.
            </p>
            <p
              class="how-to-button"
            >
              <a
                class="usa-button usa-button--unstyled"
                href="/data-requirements/"
              >
                <span
                  class="oec-text-with-icon"
                >
                  See required data
                  <svg
                    class="oec-text-with-icon__icon oec-text-with-icon__icon--direction-right oec-text-with-icon__icon--side-right"
                  >
                    arrowRight.svg
                  </svg>
                </span>
              </a>
            </p>
          </li>
          <li
            class="how-to-step"
          >
            <h3
              class="how-to-header"
            >
              Download the data template
            </h3>
            <p
              class="how-to-body"
            >
              You'll need to enter data in this file to upload in ECE Reporter.
            </p>
            <p
              class="how-to-button"
            >
              <a
                class="usa-button usa-button--unstyled"
                href="/template/"
              >
                <span
                  class="oec-text-with-icon"
                >
                  Download the template
                  <svg
                    class="oec-text-with-icon__icon oec-text-with-icon__icon--direction-right oec-text-with-icon__icon--side-right"
                  >
                    arrowRight.svg
                  </svg>
                </span>
              </a>
            </p>
          </li>
          <li
            class="how-to-step"
          >
            <h3
              class="how-to-header"
            >
              Prepare your data
            </h3>
            <p
              class="how-to-body"
            >
              Get instructions on how to enter data into OEC's template.
            </p>
            <p
              class="how-to-button"
            >
              <a
                class="usa-button usa-button--unstyled"
                href="https://help.ece-reporter.ctoec.org/prepare-your-data/"
              >
                <span
                  class="oec-text-with-icon"
                >
                  See the how-to guide
                  <svg
                    class="oec-text-with-icon__icon oec-text-with-icon__icon--direction-right oec-text-with-icon__icon--side-right"
                  >
                    arrowRight.svg
                  </svg>
                </span>
              </a>
            </p>
          </li>
          <li
            class="how-to-step"
          >
            <h3
              class="how-to-header"
            >
              Upload your data
            </h3>
            <p
              class="how-to-body"
            >
              Once your template is filled out, you'll upload the data to ECE Reporter.
            </p>
            <p
              class="how-to-button"
            >
              <a
                class="usa-button usa-button--unstyled"
                href="/upload/"
              >
                <span
                  class="oec-text-with-icon"
                >
                  Go to file upload
                  <svg
                    class="oec-text-with-icon__icon oec-text-with-icon__icon--direction-right oec-text-with-icon__icon--side-right"
                  >
                    arrowRight.svg
                  </svg>
                </span>
              </a>
            </p>
          </li>
        </ol>
      </div>
    </div>
    <div
      class="oec-loading-wrapper__indicator bg-white"
      hidden=""
    >
      <div
        class="MuiCircularProgress-root indeterminate MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
        role="progressbar"
        style="width: 40px; height: 40px;"
      >
        <svg
          class="MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
            cx="44"
            cy="44"
            fill="none"
            r="20.2"
            stroke-width="3.6"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
